--- a/ss8_cau_truc_dieu_kien1/thuc_hanh/kiem_tra_nam_nhuan.html
+++ b/ss8_cau_truc_dieu_kien1/thuc_hanh/kiem_tra_nam_nhuan.html
@@ -25,7 +25,7 @@
     //     alert(year + "khong phai");
     // }
 
-    if(year%4==0&&year%100!=0||year%400==0){
+    if(year%4===0&&year%100!==0||year%400===0){
         alert(" phai")
 
     }else {
