--- a/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_if/luyen_tap_voi_cau_truc_if_else_if.html
+++ b/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_if/luyen_tap_voi_cau_truc_if_else_if.html
@@ -10,16 +10,16 @@
 </html>
 <script>
     let value = prompt('Nhap ten?', '');
-    if (value == "Admin") {
+    if (value === "Admin") {
         let password = prompt("Nhap mat khau")
-        if (password == "TheMaster") {
+        if (password === "TheMaster") {
             alert("Welcome");
-        } else if (password = "null") {
+        } else if (password === "null") {
             alert("Canceled")
         } else {
             alert("wrong password")
         }
-    } else if (value == "null") {
+    } else if (value === "null") {
         alert("canceld")
 
     } else {
