--- a/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_toan_tu_3_ngoi/bai2.html
+++ b/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_toan_tu_3_ngoi/bai2.html
@@ -10,11 +10,11 @@
 </html>
 <script>
     let login = prompt("Enter:");
-    let message = (login == 'Employee') ?
+    let message = (login === 'Employee') ?
         'Hello' :
-        (login == 'Director') ?
+        (login === 'Director') ?
             'Greetings' :
-            (login == '') ?
+            (login === '') ?
                 'No login' :
                 '';
     alert(message)
