--- a/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_if/luyen_tap_voi_cau_truc_if_else.html
+++ b/ss8_cau_truc_dieu_kien1/thuc_hanh/luyen_tap_voi_cau_truc_if/luyen_tap_voi_cau_truc_if_else.html
@@ -10,7 +10,7 @@
 </html>
 <script>
     let value = prompt('What is the "official" name of JavaScript?', '');
-    if (value == "ECMAScript") {
+    if (value === "ECMAScript") {
         alert("Right");
     } else {
         alert(" “Didn’t know? ECMAScript!”")
