--- a/case_study/yeu_cau_1/bai4.html
+++ b/case_study/yeu_cau_1/bai4.html
@@ -9,5 +9,14 @@
 </body>
 </html>
 <script>
-
+    for (let i = 1; i <= 5; i++) {
+        for (let j = 1; j <= 9; j++) {
+            if (j - i ===4 || j + i === 6 || i === 5) {
+                document.write("*");
+            } else {
+                document.write("&nbsp&nbsp");
+            }
+        }
+        document.write("<br>");
+    }
 </script>
