--- a/case_study/yeu_cau_3/bai3.html
+++ b/case_study/yeu_cau_3/bai3.html
@@ -19,5 +19,5 @@
             max = a[i] / b[i];
         }
     }
-    alert("vi tri cua phan so la " + index)
+    alert("vi tri cua phan so la " + index);
 </script>
