--- a/case_study/yeu_cau_4/bai1.html
+++ b/case_study/yeu_cau_4/bai1.html
@@ -19,4 +19,14 @@
         }
     }
     alert(ketQua);
+    // let nhap = prompt("Nhập 1 chuỗi");
+    // let mang = nhap.split(" ");
+    // let ketQua = "";
+    // for (let i = 0; i < mang.length; i++) {
+    //     if (mang[i] !== "") {
+    //         let chu = mang[i].substr(0, 1).toUpperCase()
+    //         ketQua += chu;
+    //     }
+    // }
+    // alert(ketQua);
 </script>
