--- a/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/demo.html
+++ b/ss15_ham2/bai_tap/luyen_tap_tao_va_su_dung_ham02/demo.html
@@ -37,9 +37,10 @@
     // }
     // document.write("So so chinh phuong trong mang: " + count);
 
+    let upper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+    let lower = 'abcdefghijklmnopqrstuvwxyz';
+    let  result = [];
 
-    // let  result = [];
-    //
     // for(var x=0; x<string.length; x++)
     // {
     //     if(upper.indexOf(string[x]) !== -1)
@@ -56,8 +57,7 @@
     //     }
     // }
     // alert(result.join(''));
-    let upper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-    let lower = 'abcdefghijklmnopqrstuvwxyz';
+
 
     function checkString(str) {
 
