--- a/ss15_ham2/bai_tap/ung_dung_quan_ly_san_pham_su_dung_ham.html
+++ b/ss15_ham2/bai_tap/ung_dung_quan_ly_san_pham_su_dung_ham.html
@@ -16,7 +16,7 @@
 
     function themMoi() {
         let sanPham = document.getElementById("nhap").value;
-        if (sanPham != "") {
+        if (sanPham !== "") {
             danhSachSanPham.push(sanPham);
         } else {
             alert("vui lòng điền tên sản phẩm");
