--- a/case_study/yeu_cau_1/bai1.html
+++ b/case_study/yeu_cau_1/bai1.html
@@ -12,13 +12,13 @@
     for(let i =0 ;i<4;i++){
         for(let j=0;j<5;j++){
             if(i===0 || i===3 || j===0 ||j===4){
-                document.write("*")
+                document.write("*");
             }else{
-                document.write("&nbsp&nbsp")
+                document.write("&nbsp&nbsp");
             }
 
         }
-        document.write("<br>")
+        document.write("<br>");
 
     }
 </script>
