--- a/case_study/yeu_cau_1/bai3.html
+++ b/case_study/yeu_cau_1/bai3.html
@@ -15,7 +15,7 @@
         }
 
         for(let j=0;j<i;j++){
-            document.write("*")
+            document.write("*");
         }
 
         document.write("<br>");
