--- a/case_study/yeu_cau_5/bai2.html
+++ b/case_study/yeu_cau_5/bai2.html
@@ -5,41 +5,52 @@
     <title>Title</title>
 </head>
 <body>
-
 </body>
 </html>
 <script>
+    let row = +prompt("nhap so hang  cua mang ");
+    let column = +prompt("nhap so cot cua mang ");
 
+    function mangHaiChieu(r, c) {
 
-    let arr = [];
-    for (let i = 0; i < 3; i++) {
-        arr[i] = [];
-        for (let j = 0; j < 3; j++) {
-            arr[i][j] = +prompt("nhap mang thu " + i + "vi tri " + j);
+        let arr = [];
+        for (let i = 0; i < r; i++) {
+            arr[i] = [];
+            for (let j = 0; j < c; j++) {
+                arr[i][j] = +prompt("nhap mang thu " + i + "vi tri " + j);
 
+            }
         }
+        return arr;
     }
 
-    function checkPrime(number) {
+    let arr = mangHaiChieu(row, column)
 
+    function checkPrime(number) {
+        if (number < 2) {
+            return false;
+        }
         for (let i = 2; i < number; i++) {
+
             if (number % i === 0) {
                 return false;
             }
         }
         return true;
-
     }
 
     let count = 0;
-    for (let i = 0; i < 3; i++) {
-        for (let j = 0; j < 3; j++) {
+    let arr1 = [];
+    for (let i = 0; i < row; i++) {
+        for (let j = 0; j < column; j++) {
             if (checkPrime(arr[i][j]) === true) {
                 count++;
+                arr1 += arr[i][j];
             }
         }
     }
-    document.write("co  " + count);
+    document.write("co  " + count + "so nguyen to " + "<br>");
+    document.write("do la so " + arr1);
 
 
 </script>
