--- a/case_study/yeu_cau_5/bai3.html
+++ b/case_study/yeu_cau_5/bai3.html
@@ -11,26 +11,52 @@
 </body>
 </html>
 <script>
-    let arr = [];
-    for (let i = 0; i < 3; i++) {
-        arr[i] = [];
-        for (let j = 0; j < 3; j++) {
-            arr[i][j] = +prompt("nhap mang thu " + i + "vi tri " + j);
 
-        }
-    }
-    let max = arr[0][0];
-    let min = arr[0][0];
-    for (let i = 1; i < 3; i++) {
-        for (let j = 1; j < arr[i].length; j++) {
-            if (arr[i][j] > max) {
-                max = arr[i][j];
+    let row = +prompt("nhap so hang  cua mang ");
+    let column = +prompt("nhap so cot cua mang ");
+
+    function mangHaiChieu(r, c) {
+
+        let arr = [];
+        for (let i = 0; i < r; i++) {
+            arr[i] = [];
+            for (let j = 0; j < c; j++) {
+                arr[i][j] = +prompt("nhap mang thu " + i + "vi tri " + j);
+
             }
-            if (arr[i][j] < min) {
-                min = arr[i][j];
+        }
+        return arr;
+    }
+
+    let arr = mangHaiChieu(row, column)
+
+    function max(arr) {
+        let max = arr[0][0];
+        for (let i = 1; i < row; i++) {
+            for (let j = 1; j < column; j++) {
+                if (arr[i][j] > max) {
+                    max = arr[i][j];
+                }
             }
         }
+        return max;
     }
-    document.write("max" + max);
-    document.write("min" + min);
+
+    function min(arr) {
+
+        let min = arr[0][0];
+        for (let i = 1; i < row; i++) {
+            for (let j = 1; j < column; j++) {
+                if (arr[i][j] < min) {
+                    min = arr[i][j];
+                }
+            }
+        }
+        return min;
+    }
+
+    let nho = min(arr);
+    let lon = max(arr);
+    document.write("max" + lon);
+    document.write("min" + nho);
 </script>
